--- a/index.html
+++ b/index.html
@@ -2,77 +2,65 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>App Update</title>
+<title>Update Required</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body{
   margin:0;
+  padding:20px;
   font-family:Arial, Helvetica, sans-serif;
-  background:#f2f2f2;
+  background:#eeeeee;
 }
 
-.updateBox{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background:rgba(0,0,0,0.85);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-}
-
-.card{
-  background:#fff;
-  width:85%;
-  max-width:320px;
+.box{
+  background:#ffffff;
   border-radius:10px;
   padding:20px;
+  max-width:350px;
+  margin:80px auto;
   text-align:center;
+  box-shadow:0 4px 10px rgba(0,0,0,0.2);
 }
 
-.card h2{
-  margin:0 0 10px;
+h2{
+  margin-top:0;
   color:#222;
 }
 
-.card p{
+p{
   font-size:14px;
   color:#555;
 }
 
-.updateBtn{
+button{
   margin-top:15px;
-  padding:12px;
-  width:100%;
+  padding:12px 20px;
+  font-size:16px;
   background:#2196F3;
   color:#fff;
-  font-size:16px;
   border:none;
-  border-radius:8px;
+  border-radius:6px;
 }
 </style>
 </head>
 
 <body>
 
-<div class="updateBox">
-  <div class="card">
-    <h2>Update Available</h2>
-    <p>Please update the app to continue using it.</p>
+<div class="box">
+  <h2>Update Available</h2>
+  <p>Please update the app to continue.</p>
 
-    <button class="updateBtn" onclick="openUpdate()">
-      Update Now
-    </button>
-  </div>
+  <button onclick="openUpdate()">Update Now</button>
 </div>
 
 <script>
 function openUpdate(){
-  // THIS LINE FORCES EXTERNAL BROWSER (Chrome)
-  window.open("https://example.com/app_v1.2.apk", "_system");
+  // Forces external browser (Chrome)
+  window.open(
+    "https://example.com/app_v1.2.apk",
+    "_system"
+  );
 }
 </script>
 
