--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ h2{
     </div>
 
     <div class="step">
-      <b>Step 3:</b> After the website opens, tap the <b>menu icon (⋮)</b> present at the <b>top right corner</b>.
+      <b>Step 3:</b> After the website opens, tap the <b>menu icon (☰)</b> present at the <b>top right corner</b>.
     </div>
 
     <div class="step">
